--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "daguej",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/casetext/sortinghat.git"
+  },
   "license": "MIT"
 }
